# CompletePeaking

./: README.md  gitignore
CompletePeaker-Metabolomics/: README.md  pyproject.toml  pyvenv.cfg
CompletePeaker-Metabolomics/Scripts/: activate  activate.bat
CompletePeaker-Metabolomics/examples/: Final_Peak_Boundaries.csv
CompletePeaker-Metabolomics/src/completepeaker_metabolomics/: __init__.py  cli.py  core.py
CompletePeaker-Metabolomics/src/completepeaker_metabolomics.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
CompletePeaker-Metabolomics/tests/: test_core.py
CompletePeaker-Proteomics/: .gitignore  README.md  pyproject.toml  xgb_model.json
CompletePeaker-Proteomics/src/completepeaker_proteomics/: __init__.py  cli.py  core.py
CompletePeaker-Proteomics/src/completepeaker_proteomics.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
